--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,20 +1,37 @@
-/* main themes */
+/* overall themes */
 * {
     background-color: #23263A;
     font-family: "Roboto", sans-serif;
     color: white;
 }
 
-
-img {
-    max-width: .5rem;
-    height: auto;
+body {
+    display: flex;
+    flex-direction: column;
 }
+
+.tech {
+    max-width: 32px;
+    margin: 10px;
+}
+
+.tech_layout {
+    text-align: center;
+    /* aligns text to middle of image */
+}
+
+.technologies {
+    text-align: center;
+}
+
+
+
+
 
 /* large red bar spacer */
 .spacer_1{
-    width: 10rem;
-    height: 3px;
+    width: 50vw;
+    height: 5px;
     background-color: #EE4956;
     display: flex;
     justify-content: center;
@@ -46,49 +63,23 @@ button {
     border-radius: 3px;
 }
 
-/* settings for header and navbar */
-.topnav a {
-    font-size: 1em;
-    font-weight: bold;
-    margin-right: 20px;
-}
-
-a:visited {
-    text-decoration: none;
-}
-
-@media screen and (max-width: 480px){
-    
-    .hello {
-    font-size: 1.5rem;
-    text-align: center; 
-    }
-
-    .name {
-        font-size: 20px;
-    }
-
-    .topnav a {
-        font-size: 15px;
-        margin-right: 5px;
-    }
-
-}
-
-/* any links used not to have any changes to decorations */
-
-
-.headings {
+/* settings for and navbar */
+nav {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 2rem;
-    margin-top: 2rem;
-    font-size: 2em;
+    font-size: 15px;
+    font-weight: bold;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 1rem
+}
+
+.name {
+    display: none;
 }
 
 .hello {
-    font-size: 1.5rem;
+    display: flex;
+    font-size: 35px;
     text-align: center; 
 }
 
@@ -101,4 +92,26 @@ a:visited {
 
 .personal_links {
     text-align: center;
+}
+
+
+/* media queries have to go after base css styles */
+/* phone media query */
+@media screen and (min-width: 600px){    
+    .hello {
+        font-size: 7rem;
+    }
+
+    .topnav a {
+        font-size: 2rem;
+        margin: 30px;
+    }
+
+    #principal {
+        font-size: 2em;
+        margin: 70px;
+    }
+
+    
+
 }
