--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,19 +1,18 @@
 /* overall themes */
 * {
     font-family: "Roboto", sans-serif;
-    color: white;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 
-
 a {
     text-decoration: none;
+    color: white
 }
 
-a:hover {
+a:hover, #consub:hover {
     cursor: pointer;
 }
 
@@ -21,6 +20,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #23263A;
+    color: white;
 }
 
 .tech {
@@ -37,7 +37,6 @@ header {
 }
 
 h2 {
-    color: white;
     margin: 1rem;
 }
 
@@ -93,6 +92,8 @@ h2 {
 .about_desc {
     text-align: center;
     margin: 3rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     font-size: 2rem;
 }
 
@@ -100,6 +101,7 @@ button {
     background-color: #FF4A57;
     display: flex;
     border: none;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1rem;
@@ -107,6 +109,7 @@ button {
     padding-right: 1rem;
     padding: .5rem;
     border-radius: 3px;
+    min-width: 5rem;
 }
 
 button:hover {
@@ -122,7 +125,10 @@ nav {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px
+}
 
+a:current {
+    border:solid white 1px;
 }
 
 .name {
@@ -165,12 +171,13 @@ main h1 {
 #end {
     padding: 10px;
     font-size: 10px;
+    background-color: #2B2D41;
+    width: 100%;
+    position: bottom;
 }
 
 .container {
     position: relative;
-    /* width: 1200px;
-    height: 300px; */
     margin: 1rem; 
     display: flex;
     flex-wrap: wrap;
@@ -205,9 +212,6 @@ main h1 {
     display:none;
 }
 
-footer {
-    background-color: #2B2D41;
-}
 
 .page_topper {
    margin-top: 2rem;
@@ -221,6 +225,95 @@ footer {
 .other_skills {
     height: 3rem;
     margin: 1rem;
+}
+
+h3 {
+    color: #EE4956;
+}
+
+h4 {
+    margin-bottom: 1rem;
+}
+
+/* Portfolio CSS Mobile */
+.port_container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.port_image {
+    max-width: 100%;
+    padding: 1rem;
+}
+
+.column a {
+    display: inline-block;
+    margin-top: 1rem;
+}
+
+.column p {
+    color:#808080;
+}
+
+.column p, a {
+    text-align: justify;
+    margin: 1rem;
+}
+
+.column h4 {
+    text-align: left;
+    margin: 1rem;
+    font-size: 1.5rem;
+    color: #EE4956;
+}
+
+main h3 {
+    margin-left: 1rem;
+    color: white;
+}
+/* end of portfolio CSS mobile */
+
+/* contact page */
+
+.contact_container {
+    display: flex;
+    background-color: #2B2D41;
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.info_column h2 {
+    margin-bottom: 0;
+    font-size: 2rem;
+}
+
+.info_column p {
+    color:#808080;
+    font-size: 1.5rem;
+    padding: 1rem;
+    text-align: justify;
+}
+
+.info_column a {
+    display: inline-block;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+form #fname, form #message, form #consub{
+    margin-left: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+#consub {
+    background-color: #EE4956;
+    border: 0px;
+    border-radius: 3px;
+    color: white;
+    width: 5rem;
+    height: 2rem;
 }
 
 
@@ -314,4 +407,43 @@ footer {
         height: 7rem;
         margin: 1rem;
     }
+
+/* portfolio */
+    .port_container{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .port_image {
+        max-width: 100%;
+        width: 75%;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+        min-width: 50%;
+    }
+
+    .column {
+        flex: 50%;
+        padding: 10px;
+
+    }
+
+    .column a {
+        display: inline-block;
+        margin-top: 1rem;
+    }
+
+    .column p{
+        font-size: 1.5rem; 
+    }
+
+    .column h4 {
+        font-size: 2rem;
+    }
+    
+    main h3 {
+        font-size: 2rem;
+    }
+    
 }
