--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -34,6 +34,8 @@ body {
 
 header {
     background-color: #2B2D41;
+    text-decoration: none;
+    display: flex;
 }
 
 h2 {
@@ -127,6 +129,10 @@ nav {
     margin-bottom: 20px
 }
 
+nav:active
+
+/* navbar end */
+
 a:current {
     border:solid white 1px;
 }
@@ -166,6 +172,11 @@ main h1 {
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.personal_links:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
 }
 
 #end {
@@ -211,7 +222,6 @@ main h1 {
 .content:hover figcaption, .content:hover img {
     display:none;
 }
-
 
 .page_topper {
    margin-top: 2rem;
@@ -302,6 +312,12 @@ main h3 {
     margin-bottom: 1rem;
 }
 
+a:hover {
+    transform: scale(1.2);
+    color: orange;
+    transition: 0.3s ease-in-out;
+}
+
 form #fname, form #message, form #consub{
     margin-left: 1rem;
     margin-bottom: 0.5rem;
@@ -318,6 +334,22 @@ form #fname, form #message, form #consub{
 
 
 /* media queries have to go after base css styles */
+
+@media screen and (min-width: 1000px){   
+
+    .column, .form_column, .info_column {
+        flex: 50%;
+        padding: 10px;
+    }
+
+    .port_image {
+        max-width: 100%;
+        width: 75%;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+        min-width: 50%;
+    }
+}
 /* desktop styles */
 @media screen and (min-width: 600px){   
 
@@ -401,32 +433,15 @@ form #fname, form #message, form #consub{
     .other_skills {
         height: auto;
         width: auto;
-    }
-    
-    .other_skills {
         height: 7rem;
         margin: 1rem;
     }
 
 /* portfolio */
-    .port_container{
+    .port_container, .contact_container{
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-    }
-
-    .port_image {
-        max-width: 100%;
-        width: 75%;
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        min-width: 50%;
-    }
-
-    .column {
-        flex: 50%;
-        padding: 10px;
-
     }
 
     .column a {
@@ -445,5 +460,6 @@ form #fname, form #message, form #consub{
     main h3 {
         font-size: 2rem;
     }
-    
+
+ 
 }
