fixed mail icon link in contact

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -415,6 +415,7 @@ footer p {
         padding-left: 3rem;
         padding-right: 3rem;
         font-size: 1.5rem;
+        color: white;
     }
 
     .more_tech {
